--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clock-routine-generator",
-  "version": "0.0.0",
+  "version": "beta 0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
